added requirements.txt, updated readme with installation instructions, improved fuzz testing slide a bit.

--- a/property_based_testing.ipynb
+++ b/property_based_testing.ipynb
@@ -112,7 +112,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -138,14 +138,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('h', 1), ('e', 1), ('l', 6), ('o', 1)]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "encode('hellllllo')"
    ]
@@ -167,7 +178,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -180,14 +191,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "decode([('h', 1), ('e', 1), ('l', 2), ('o', 1)])"
    ]
@@ -208,7 +230,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -233,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -245,13 +267,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "================================================= test session starts =================================================\n",
-      "platform linux2 -- Python 2.7.6, pytest-2.9.2, py-1.4.31, pluggy-0.3.1\n",
-      "rootdir: /home/moagstar/Projects/property-based-testing, inifile: \n",
+      "============================= test session starts =============================\n",
+      "platform win32 -- Python 2.7.10, pytest-2.9.2, py-1.4.31, pluggy-0.3.1\n",
+      "rootdir: D:\\Personal\\github\\property-based-testing, inifile: \n",
       "plugins: hypothesis-3.4.2\n",
       "collected 0 items\n",
       "\n",
-      "============================================ no tests ran in 0.01 seconds =============================================\n"
+      "======================== no tests ran in 0.01 seconds =========================\n"
      ]
     }
    ],
@@ -279,9 +301,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -314,14 +336,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================= test session starts =============================\n",
+      "platform win32 -- Python 2.7.10, pytest-2.9.2, py-1.4.31, pluggy-0.3.1\n",
+      "rootdir: D:\\Personal\\github\\property-based-testing, inifile: \n",
+      "plugins: hypothesis-3.4.2\n",
+      "collected 0 items\n",
+      "\n",
+      "======================== no tests ran in 0.01 seconds =========================\n"
+     ]
+    }
+   ],
    "source": [
     "pytest_run('test_run_length_encode_decode_parameterized')"
    ]
@@ -363,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -376,28 +412,40 @@
     "\n",
     "random.seed(0)\n",
     "\n",
-    "rand_lower = lambda: random.choice(string.lowercase)\n",
-    "rand_range = lambda: range(int(random.random() * 10))\n",
+    "random_letter = lambda  : random.choice(string.lowercase)\n",
+    "random_range  = lambda  : range(random.randint(0, 10))\n",
+    "random_word   = lambda  : (random_letter() for i in random_range())\n",
+    "random_words  = lambda n: (''.join(random_word()) for n in range(n))\n",
     "\n",
-    "def randomwords(n):\n",
-    "    return [''.join(rand_lower() for i in rand_range())\n",
-    "            for n in range(n)]\n",
-    "\n",
-    "@pytest.mark.parametrize('input_data', randomwords(5))\n",
+    "@pytest.mark.parametrize('input_data', random_words(5))\n",
     "def test_run_length_encode_decode_fuzzed(input_data):\n",
     "    assert decode(encode(input_data)) == input_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================= test session starts =============================\n",
+      "platform win32 -- Python 2.7.10, pytest-2.9.2, py-1.4.31, pluggy-0.3.1\n",
+      "rootdir: D:\\Personal\\github\\property-based-testing, inifile: \n",
+      "plugins: hypothesis-3.4.2\n",
+      "collected 0 items\n",
+      "\n",
+      "======================== no tests ran in 0.01 seconds =========================\n"
+     ]
+    }
+   ],
    "source": [
     "pytest_run('test_run_length_encode_decode_fuzzed')"
    ]
@@ -419,16 +467,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
    "outputs": [],
    "source": [
-    "@pytest.mark.parametrize('input_data', randomwords(10))\n",
+    "@pytest.mark.parametrize('input_data', random_words(20))\n",
     "def test_run_length_encode_decode_fuzzed_fails(input_data):\n",
     "    assert decode(encode(input_data)) == input_data"
    ]
@@ -437,7 +485,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -475,9 +523,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -494,14 +542,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "============================= test session starts =============================\n",
+      "platform win32 -- Python 2.7.10, pytest-2.9.2, py-1.4.31, pluggy-0.3.1\n",
+      "rootdir: D:\\Personal\\github\\property-based-testing, inifile: \n",
+      "plugins: hypothesis-3.4.2\n",
+      "collected 0 items\n",
+      "\n",
+      "======================== no tests ran in 0.01 seconds =========================\n"
+     ]
+    }
+   ],
    "source": [
     "pytest_run('test_run_length_encode_decode_hypothesis')"
    ]
@@ -514,33 +576,55 @@
     }
    },
    "source": [
-    "## built in (and building) strategies"
+    "## Built in (and building) strategies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 110,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "st.integers(min_value=-100, max_value=100).example()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "u'~C'"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "st.text(st.characters(\n",
     "        min_codepoint=64,\n",
@@ -549,14 +633,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "st.lists(st.integers()).example()"
    ]
@@ -565,7 +660,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -584,7 +679,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -603,14 +698,14 @@
     }
    },
    "source": [
-    "## rule based stateful testing "
+    "## Rule based stateful testing "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "notes"
     }
@@ -622,7 +717,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -648,7 +743,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "notes"
     }
@@ -664,7 +759,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -678,7 +773,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -697,7 +792,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -711,7 +806,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -745,7 +840,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -764,7 +859,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -778,7 +873,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -808,7 +903,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -843,7 +938,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -871,7 +966,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.10"
   },
   "livereveal": {
    "theme": "black",
