--- a/src/presentation.ipynb
+++ b/src/presentation.ipynb
@@ -1,55 +1,38 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "assert decode(encode_fixed('4')) == '4'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
    },
+   "outputs": [],
    "source": [
-    "say we have a run length encoding function we encode a string as characters and the number of consective occurences of that character let's just test this out with something simple"
+    "%%javascriptb\n",
+    "$('#run_all_cells_below').click()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "def encode(input_string):\n",
-    "    count = 1\n",
-    "    prev = ''\n",
-    "    lst = []\n",
-    "    for character in input_string:\n",
-    "        if character != prev:\n",
-    "            if prev:\n",
-    "                lst.append((prev, count))\n",
-    "            count = 1\n",
-    "            prev = character\n",
-    "        else:\n",
-    "            count += 1\n",
-    "    else:\n",
-    "        lst.append((character, count))\n",
-    "    return lst\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "encode('Hello, World')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
@@ -62,6 +45,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -86,19 +72,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
    },
+   "outputs": [],
    "source": [
-    "encode('hello')\n"
+    "encode('hello')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
@@ -111,6 +104,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -125,6 +121,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -137,6 +136,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
@@ -149,6 +150,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -156,9 +160,9 @@
    "outputs": [],
    "source": [
     "def test_run_length_encode():\n",
-    "    test_data = \"Hello, World\"\n",
+    "    input_data = \"hello\"\n",
     "    expected = [('h', 1), ('e', 1), ('l', 2), ('o', 1)]\n",
-    "    actual = encode(test_data)\n",
+    "    actual = encode(input_data)\n",
     "    assert actual == expected"
    ]
   },
@@ -166,6 +170,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!py.test -k test_run_length_encode -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -173,9 +196,9 @@
    "outputs": [],
    "source": [
     "def test_run_length_decode():\n",
-    "    test_data = [('h', 1), ('e', 1), ('l', 2), ('o', 1)]\n",
-    "    expected = \"Hello, World\"\n",
-    "    actual = decode(test_data)\n",
+    "    input_data = [('h', 1), ('e', 1), ('l', 2), ('o', 1)]\n",
+    "    expected = \"hello\"\n",
+    "    actual = decode(input_data)\n",
     "    assert actual == expected"
    ]
   },
@@ -183,8 +206,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
@@ -196,41 +222,65 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "outputs": [],
    "source": [
-    "@pytest.mark.parametrize('test_data, expected', [\n",
-    "    ('hello', [('h', 1), ('e', 1), ('l', 2), ('o', 1)]),\n",
-    "    ('python', [('p', 1), ('y', 1), ('t', 1), ('h', 1), ('o', 1), ('n', 1)]),\n",
-    "    ('uhm...', [('u', 1), ('h', 1), ('m', 1), ('.', 3)]),\n",
-    "])\n",
-    "def test_run_length_encode(test_data, expected):\n",
-    "    actual = decode(test_data)\n",
-    "    assert actual == expected"
+    "import pytest\n",
+    "\n",
+    "examples = ['hello', 'python', 'uhm...']\n",
+    "\n",
+    "@pytest.mark.parametrize('input_data', examples)\n",
+    "def test_parameterized_run_length_encode(input_data):\n",
+    "    assert decode(encode(input_data)) == input_data"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
    "source": [
-    "!py.test -k test_run_length_encode_decode_parameterized -q"
+    "!py.test -k test_parameterized_run_length_encode -q"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!py.test -k test_parameterized_run_length_decode -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -239,13 +289,13 @@
     "\n",
     "random.seed(0)\n",
     "\n",
-    "random_letter = lambda: random.choice(string.lowercase)\n",
-    "random_range = lambda: range(random.randint(0, 10))\n",
-    "random_word = lambda: (random_letter() for i in random_range())\n",
-    "random_words = lambda n: (''.join(random_word()) for n in range(n))\n",
+    "random_letter = lambda: random.choice(string.ascii_letters)\n",
+    "random_range = lambda m: range(random.randint(0, m))\n",
+    "random_word = lambda m: (random_letter() for i in random_range(m))\n",
+    "random_words = lambda n, m: (''.join(random_word(m)) for n in range(n))\n",
     "\n",
-    "@pytest.mark.parametrize('input_data', random_words(5))\n",
-    "def test_run_length_encode_decode_fuzzed(input_data):\n",
+    "@pytest.mark.parametrize('input_data', random_words(5, 10))\n",
+    "def test_fuzzed_run_length_encode_decode(input_data):\n",
     "    assert decode(encode(input_data)) == input_data"
    ]
   },
@@ -253,21 +303,27 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
    "source": [
-    "!py.test -k test_run_length_encode_decode_fuzzed -q"
+    "!py.test -k test_fuzzed_run_length_encode_decode -q"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "outputs": [],
@@ -276,7 +332,7 @@
     "from hypothesis import given\n",
     "\n",
     "@given(st.text())\n",
-    "def test_run_length_encode_decode_property_based(input_data):\n",
+    "def test_property_based_run_length_encode_decode(input_data):\n",
     "    assert decode(encode(input_data)) == input_data"
    ]
   },
@@ -284,17 +340,148 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "-"
     }
    },
    "outputs": [],
    "source": [
-    "!py.test -k test_run_length_encode_decode_property_based -q"
+    "!py.test -k test_property_based_run_length_encode_decode -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def encode_fixed(input_string):\n",
+    "    count = 1\n",
+    "    prev = ''\n",
+    "    lst = []\n",
+    "    character = ''\n",
+    "    for character in input_string:\n",
+    "        if character != prev:\n",
+    "            if prev:\n",
+    "                lst.append((prev, count))\n",
+    "            count = 1\n",
+    "            prev = character\n",
+    "        else:\n",
+    "            count += 1\n",
+    "    else:\n",
+    "        lst.append((character, count))\n",
+    "    return lst"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "@given(st.text())\n",
+    "def test_property_based_run_length_encode_fixed_decode(input_data):\n",
+    "    assert decode(encode_fixed('input_data')) == input_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".\r\n",
+      "\u001b[1m============================= 11 tests deselected ==============================\u001b[0m\r\n",
+      "\u001b[32m\u001b[1m1 passed, 11 deselected in 0.11 seconds\u001b[0m\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!py.test -k test_fuzzed_run_length_encode_decode -q"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "$('#clear_all_output').click()"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "$('#clear_all_output').click()\n"
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
+  },
+  "livereveal": {
+   "scroll": true,
+   "theme": "Simple",
+   "transition": "fade"
+  }
+ },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
