Made parameterized tests 'property based'

--- a/src/presentation.ipynb
+++ b/src/presentation.ipynb
@@ -4,35 +4,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "assert decode(encode_fixed('4')) == '4'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
    },
    "outputs": [],
    "source": [
-    "%%javascriptb\n",
+    "%%javascript\n",
     "$('#run_all_cells_below').click()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
@@ -45,9 +29,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -75,9 +56,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -90,8 +68,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
@@ -104,9 +80,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -121,9 +94,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -136,8 +106,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
@@ -150,9 +118,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -170,9 +135,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -186,9 +148,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -206,9 +165,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -222,9 +178,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -236,7 +189,7 @@
     "examples = ['hello', 'python', 'uhm...']\n",
     "\n",
     "@pytest.mark.parametrize('input_data', examples)\n",
-    "def test_parameterized_run_length_encode(input_data):\n",
+    "def test_parameterized_run_length_encode_decode(input_data):\n",
     "    assert decode(encode(input_data)) == input_data"
    ]
   },
@@ -244,41 +197,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
    },
    "outputs": [],
    "source": [
-    "!py.test -k test_parameterized_run_length_encode -q"
+    "!py.test -k test_parameterized_run_length_encode_decode -q"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "!py.test -k test_parameterized_run_length_decode -q"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -303,9 +234,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -319,9 +247,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -340,9 +265,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -356,9 +278,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -385,11 +304,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -398,60 +314,31 @@
    "source": [
     "@given(st.text())\n",
     "def test_property_based_run_length_encode_fixed_decode(input_data):\n",
-    "    assert decode(encode_fixed('input_data')) == input_data"
+    "    assert decode(encode_fixed(input_data)) == input_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".\r\n",
-      "\u001b[1m============================= 11 tests deselected ==============================\u001b[0m\r\n",
-      "\u001b[32m\u001b[1m1 passed, 11 deselected in 0.11 seconds\u001b[0m\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!py.test -k test_fuzzed_run_length_encode_decode -q"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "$('#clear_all_output').click()"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%javascript\n",
     "$('#clear_all_output').click()\n"
@@ -459,23 +346,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 2",
-   "language": "python",
-   "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
-  },
   "livereveal": {
    "scroll": true,
    "theme": "Simple",
