Fixed ipynb generation and started adding information for'choosing properties' slide

--- a/src/presentation.ipynb
+++ b/src/presentation.ipynb
@@ -4,6 +4,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
@@ -17,6 +20,103 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Property Based Testing\n",
+    "## (Using Hypothesis)<br><br><br>\n",
+    "### Amsterdam Python Meetup\n",
+    "### 27 April 2017<br><br><br>\n",
+    "### Daniel Bradburn\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* Property based testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Choosing properties"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Generating data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Model based testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Django"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Real world examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
@@ -29,6 +129,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -56,6 +159,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -68,6 +174,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
@@ -80,6 +188,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -94,6 +205,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "fragment"
     }
@@ -106,6 +220,8 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
@@ -118,6 +234,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -135,6 +254,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -148,6 +270,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -165,6 +290,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -178,6 +306,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -197,6 +328,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -210,6 +344,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -234,6 +371,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -247,6 +387,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -265,6 +408,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -278,6 +424,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -306,6 +455,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -321,6 +473,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "-"
     }
@@ -334,6 +489,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
     "slideshow": {
      "slide_type": "notes"
     }
@@ -346,6 +504,23 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
+  },
   "livereveal": {
    "scroll": true,
    "theme": "Simple",
