--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 - Good example of shrinkage to demonstrate extracting signal from noise
 - Good example of custom data generation
 - Django
+- Section summaries
 - Notes for everything
 - General tidy up
