fixed typo in model based operations tuple, and added sh cells for running property pattern tests

--- a/src/presentation.ipynb
+++ b/src/presentation.ipynb
@@ -546,6 +546,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".\r\n",
+      "\r\n",
+      "======================== 23 tests deselected =========================\r\n",
+      "\r\n",
+      "1 passed, 23 deselected in 0.17 seconds\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!sh pytest_run.sh test_round_and_around"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true,
@@ -560,6 +588,34 @@
     "@given(st.integers(), st.integers())\n",
     "def test_different_paths_same_destination_add(x, y):\n",
     "    assert x + y == y + x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".\r\n",
+      "\r\n",
+      "======================== 23 tests deselected =========================\r\n",
+      "\r\n",
+      "1 passed, 23 deselected in 0.13 seconds\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!sh pytest_run.sh test_different_paths_same_destination_add"
    ]
   },
   {
@@ -586,6 +642,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "..\r\n",
+      "\r\n",
+      "======================== 22 tests deselected =========================\r\n",
+      "\r\n",
+      "2 passed, 22 deselected in 0.20 seconds\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!sh pytest_run.sh test_there_and_back_again"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true,
@@ -608,6 +692,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".\r\n",
+      "\r\n",
+      "======================== 23 tests deselected =========================\r\n",
+      "\r\n",
+      "1 passed, 23 deselected in 0.17 seconds\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!sh pytest_run.sh test_some_things_never_change"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true,
@@ -626,18 +738,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".\r\n",
+      "\r\n",
+      "======================== 23 tests deselected =========================\r\n",
+      "\r\n",
+      "1 passed, 23 deselected in 0.15 seconds\r\n"
+     ]
+    }
+   ],
    "source": [
-    "# Hard to prove, easy to verify"
+    "!sh pytest_run.sh test_the_more_things_change_the_more_they_stay_the_same"
    ]
   },
   {
@@ -653,7 +777,69 @@
    },
    "outputs": [],
    "source": [
-    "# Two heads are better than one (Test oracle)"
+    "def test_hard_to_prove_easy_to_verify():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "!sh pytest_run.sh test_hard_to_prove_easy_to_verify"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def test_two_heads_are_better_than_one():\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".\r\n",
+      "\r\n",
+      "======================== 23 tests deselected =========================\r\n",
+      "\r\n",
+      "1 passed, 23 deselected in 0.08 seconds\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!sh pytest_run.sh test_two_heads_are_better_than_one"
    ]
   },
   {
@@ -1103,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1183,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -1213,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false,
     "deletable": true,
